--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,4 +1,5 @@
-{% extends 'layout.html' %} {% load bootstrap_tags %}{%block title%}login{%endblock%} 
+{% extends 'layout.html' %}{% load staticfiles %}
+{% load bootstrap_tags %}{%block title%}login{%endblock%} 
 {% block content %}
 <div class='container'>
     <div class='row'>
