--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}{% load staticfiles %}
+{% extends 'layout.html' %}{% load static %}
 {% load bootstrap_tags %}{%block title%}login{%endblock%} 
 {% block content %}
 <div class='container'>
