--- a/takeaway_app/templates/index.html
+++ b/takeaway_app/templates/index.html
@@ -4,7 +4,7 @@
 <title>home</title>
 {% endblock %}
 {% block content %}
-<!--content start-->
+<!--slide start-->
 		<div id="content" class="center" >
 	  		<div id="slider_box" >
 	    		<div id="slider" class="center">
@@ -19,16 +19,28 @@
 	    		</div>
 	  		</div>
 		</div>
-    </div>
-</div>
-<div class="zhongxia juzhong">
-	<div style="width:5px;height:20px;background-color:red;position:absolute;left:40px;top:4px;"></div>
-	<p style="font-size:20px;margin-left:50px;margin-bottom:20px;">food</p>
-	{% for food in food %}
-            <div>
-            <p>{{ food.name }}</p>{{ food.description }}
-             <img src="{% get_media_prefix %}{{food.image}}" />
-         </div>
+
+<div class="container">
+<div class="row">  
+	 {% for food in food %}
+    <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12 block">
+    			<h5>{{ food.name }}</h5>
+    	       <img src="{% get_media_prefix %}{{food.image}}" style="width:90%" alt="foods" />
+          			<h6>price:{{ food.price }}$</h6> 
+                <h6>Cuisine: {{ food.menu }}</h6>
+                <a href="{% url 'food_detail' food.id %}" class="read-more">Read More</a>
+                <form method="post" action="{% url 'add_to_cart' food.id %}">
+                    {% csrf_token %}
+                    <div class="input-group">
+                        <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity">
+                        <span class="input-group-btn">
+                            <button class="btn btn-success" type="submit">Add</button>
+                        </span>
+                    </div>
+                </form>
+    </div> 
     {% endfor %}
-</div>
+   </div> 
+   
+</div> 
 {% endblock%}
