--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static  'css/style.css'%}" type="text/css"/>
+    <link rel="stylesheet" href="{% static 'css/style.css'%}" type="text/css"/>
     <title>{%block title%}{%endblock%}</title>
 
 </head>
@@ -27,12 +27,19 @@
         {% endif %}
     </ul>
     
-    <form class="form-inline my-2 my-lg-0" method='get' action='/search'>
+    <form class="form-inline my-2 my-lg-0" method='get' action='{% url 'search' %}'>
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search" name='search' type="search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
 </nav>
+<ul class="nav">
+ {% for menu in menu %}
+  <li class="nav-item">
+    <a class="nav-link">{{menu.name}}</a>
+  </li>
+  {% endfor %}
+</ul>
 {% if messages %}
     <div>
         <ul>
