--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css'%}" type="text/css"/>
     <title>{%block title%}{%endblock%}</title>
@@ -25,10 +26,17 @@
         {% else %}
         <li class="nav-item active"><a class="nav-item"  href="{% url 'logout_link' %}">Log Out</a></li>
         {% endif %}
+        <li>
+            <a href="{% url 'view_cart' %}">
+                <i class="fa fa-shipping-cart"></i>Cart
+                {% if food_count > 0 %}
+                <label class="badge badge-warning">{{ food_count }}</label>
+                {% endif %}
+            </a>
+        </li>
     </ul>
-    
     <form class="form-inline my-2 my-lg-0" method='get' action='{% url 'search' %}'>
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search" name='search' type="search">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search" type="search" name="q">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
   </div>
@@ -45,7 +53,7 @@
         <ul>
             {% for m in messages %}
             <li>{{m}}</li>
-            {% endfor %}
+            {% endfor %} 
         </ul>
     </div>
     {% endif %}
