--- a/takeaway_app/templates/detail.html
+++ b/takeaway_app/templates/detail.html
@@ -10,12 +10,20 @@
      <div>
         <h1 style="text-align:center">{{food_detail.name}}</h1> 
      </div>
-    <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12 block">
-    	       <img src="{% get_media_prefix %}{{food_detail.image}}" style="width:90%" alt="foods" />
-          		<p>{{ food_detail.description }}</p> 
+    <div class="col-lg-12 col-md-12 col-xs-12 col-sm-12 block">
+    	       <img src="{% get_media_prefix %}{{food_detail.image}}" style="width:50%" alt="foods" />
+          		<p style="width:50%">{{ food_detail.description }}</p> 
                 <h6>Cuisine: {{ food_detail.menu }}</h6>
                 <h6>price:{{ food_detail.price }}$</h6> 
-                <a href="">[cart]</a>
+               <form method="post" action="{% url 'add_to_cart' food_detail.id %}">
+                    {% csrf_token %}
+                    <div class="input-group">
+                        <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity">
+                        <span class="input-group-btn" style="width:50%">
+                            <button class="btn btn-success" type="submit">Add to cart</button>
+                        </span>
+                    </div>
+                </form>
     </div> 
    </div> 
 </div>
