--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -27,7 +27,7 @@
         {% endfor %}
     {% endif %}
     
-    <p>If you already have an account, you can <a href="{% url 'register_link' %}">sign in </a></p>
+    <p>If you already have an account, you can <a href="{% url 'login_link' %}">sign in </a></p>
  </div>
 </div>
 <div class='container'>
