--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -1,26 +1,26 @@
 {% extends 'layout.html' %}
 {% load static %}
 {% load bootstrap_tags %}
-
 {% block content %}
+
 <div class="container">
-    
 <div class="row row-flex">
     {% for item in cart_items %}
     <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-display">
         <div class="caption">
-            <h3>{{ item.food.name }}</h3>
-            <p>price:{{ item.food.price }}$</p>
+            <ul>
+            <li>{{ item.food.name }}</li>
+            <li>price:{{ item.food.price }}$</li>
+            </ul>
             <p>
-                
                 <form class="form" method="post" action="{% url 'adjust_cart' item.id %}">
                     {% csrf_token %}
                     <div class="form-group">
                         <label for="exampleInputAmount" class="sr-only">New Qty</label>
                         <div class="input-group">
                             <div class="input-group-addon">Qty</div>
-                            <input name="quantity" type="number" min="0" max="99" class="form-control">
-                            <div class="input-group-addon">{{item.quantity}}</div>
+                            <input name="quantity" type="number" min="0" max="999" class="form-control">
+                            <div class="input-group-addon">quantity:{{item.quantity}}</div>
                         </div>
                     </div>
                     <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>
@@ -29,13 +29,52 @@
         </div>
     </div>
     {% endfor %}
-</div>
-</div>
-<div class="container">
-<div class="row">
+    <div>
     <p>Total:</p>
-    <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ total }}$</p><br>
+    <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ total }}$</p>
     <a href="{% url 'checkout' %}" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a>
 </div>
 </div>
+</div>
 {% endblock %}
+
+
+
+<!--<div class="container">-->
+<!--     <form class="form" method="post" action="{% url 'adjust_cart' item.id %}">-->
+<!--     {% csrf_token %}-->
+<!--	<table class="table table-hover table-condensed">-->
+<!--    				<thead>-->
+<!--						<tr>-->
+<!--							<th style="width:50%">Product</th>-->
+<!--							<th style="width:10%">Price</th>-->
+<!--							<th style="width:8%">Quantity</th>-->
+<!--							<th style="width:10%">Amend</th>-->
+<!--						</tr>-->
+<!--					</thead>-->
+<!--					<tbody>-->
+<!--					     {% for item in cart_items %}-->
+<!--						<tr>-->
+<!--							<td data-th="food">-->
+							
+<!--										<p class="nomargin">{{ item.food.name }}</p>-->
+								
+<!--							</td>-->
+<!--							<td data-th="Price">{{item.food.price}}</td>-->
+<!--							<td data-th="Quantity"><input name="quantity" type="number" min="1" max="999" class="form-control"></td>-->
+<!--							<td>-->
+<!--							 <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>							-->
+<!--							</td>-->
+<!--						</tr>-->
+<!--						{% endfor %}-->
+<!--					</tbody>-->
+<!--					<tfoot>-->
+<!--						<tr>-->
+<!--							<td><a href="#" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>-->
+<!--							<td colspan="2" class="hidden-xs"></td>-->
+<!--							<td class="hidden-xs text-center"><strong>Total {{ total }}</strong></td>-->
+<!--							<td><a href="{% url 'checkout' %}" class="btn btn-success btn-block">Checkout</a></td>-->
+<!--						</tr>-->
+<!--					</tfoot>-->
+<!--				</table>-->
+<!--</div>-->
