--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -1,7 +1,47 @@
 {% extends 'layout.html' %}{% load static %}
 {% load bootstrap_tags %}
+
 {% block head_js %}
+<script type="text/javascript" src="https://js.stripe.com/v2/">
+</script>
 <script>
+// /* global $ */
+// $(function() {
+//     $("#payment-form").submit(function() {
+//         var form = this;
+//         var card = {
+//             number: $("#id_credit_card_number").val(),
+//             expMonth: $("#id_expiry_month").val(),
+//             expYear: $("#id_expiry_year").val(),
+//             cvc: $("#id_cvv").val()
+//         };
+        
+//      let stripe_publishable_key = '{{stripe_publishable_key }}';
+//      Stripe.publishableKey = stripe_publishable_key;
+     
+//      Stripe.createToken(card, function(status, response) {
+//         if (status === 200) {
+//             $("#credit-card-errors").hide();
+//             $("#id_stripe_id").val(response.id);
+
+//             // Prevent the credit card details from being submitted
+//             // to our server
+//             $("#id_credit_card_number").removeAttr('name');
+//             $("#id_cvv").removeAttr('name');
+//             $("#id_expiry_month").removeAttr('name');
+//             $("#id_expiry_year").removeAttr('name');
+
+//             form.submit();
+//         } else {
+//             $("#stripe-error-message").text(response.error.message);
+//             $("#credit-card-errors").show();
+//             $("#validate_card_btn").attr("disabled", false);
+//         }
+//     });
+//     return false;
+//     });
+// });
+
 /* global $ */
 $(function(){
 
@@ -43,28 +83,10 @@ $(function(){
 {% endblock %}
 
 {% block content %}
-<div class="row row-flex">
-    {% for item in cart_items %}
-        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
-            <div class="panel-body">
-                <div class="food" style="background-image: url('{{ MEDIA_URL }}{{ item.food.image }}')"></div>
-
-                <div class="caption">
-                    <h3>{{ item.food.name }}</h3>
-                    <p class="product-description">{{ item.food.description}}</p>
-                    <p>{{ item.quantity }}</p>
-                    <p>item.food.price</p>
-                </div>
-            </div>
-        </div>
-    {% endfor %}
-</div>
-<div class="row">
-    <p>Total</p>
-    <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ total }}</p>
-</div>
-
+<div class="container">
+<!--payment form-->
 <form role="form" method="post" id="payment-form" action="{% url 'checkout' %}">
+    <div class="row justify-content-center">
     <legend>Payment Details</legend>
 
     <div id="credit-card-errors" style="display: none;">
@@ -74,14 +96,25 @@ $(function(){
     <div class="form-group col-md-6">
         {{ order_form | as_bootstrap }}
     </div>
-
+    
     <div class="form-group col-md-6">
         {{ payment_form | as_bootstrap }}
     </div>
-
+    <div class='form-group col-md-6'>
+                <div class='form-control total btn btn-info'>
+                  Total:
+                  <span class='amount'> {{ total }}</span>
+                </div>
+  </div>
+            
     {% csrf_token %}
-    <div class="form-group col-md-12">
-        <input class=" btn btn-primary" id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
+    <div class="form-group col-md-6">
+         <input class='form-control btn btn-primary' id="submit_payment_btn" name="commit" type="submit" value="Submit Payment">
     </div>
+  </div>
 </form>
+</div>
+</div>
 {% endblock %}
+
+
