--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,53 +1,65 @@
 {% load static %}
+{% load bootstrap_tags %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css'%}" type="text/css"/>
+    {% block head_js %}
+    {% endblock head_js %}
     <title>{%block title%}{%endblock%}</title>
-
 </head>
-<body>
-<nav class="navbar navbar-expand-lg navbar-light bg-danger">
-  <a class="navbar-brand" href="/">Takeaway</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-        
-    {% if not user.is_authenticated %}
-        <li class="nav-item active"><a class="nav-item" href="{% url 'login_link' %}">Log In</a></li>
-        <li class="nav-item active"><a class="nav-item" href="{% url 'register_link' %}">Register</a></li>
-        {% else %}
-        <li class="nav-item active"><a class="nav-item"  href="{% url 'logout_link' %}">Log Out</a></li>
-        {% endif %}
-        <li>
-            <a href="{% url 'view_cart' %}">
-                <i class="fa fa-shipping-cart"></i>Cart
-                {% if food_count > 0 %}
-                <label class="badge badge-warning">{{ food_count }}</label>
-                {% endif %}
-            </a>
-        </li>
-    </ul>
-  
-    <form class="form-inline my-2 my-lg-0" method='get' action='{% url 'search' %}'>
-          {% csrf_token %}
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search" type="search" name="q">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
 
-<ul class="nav">
+<body>
+<div class='container'>
+ <nav class="navbar navbar-expand-lg navbar-light  bg-danger">
+    <div class="d-flex flex-grow-1">
+        <!--<span class="w-100 d-lg-none d-block"></span>-->
+        <a class="navbar-brand  d-lg-inline-block" href="/">
+           Takeaway
+        </a>
+        <div class="w-100 text-right">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </div>
+    <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
+        <ul class="navbar-nav ml-auto flex-nowrap">
+            <li class="nav-item">
+                <a href="{% url 'index' %}" class="nav-link m-2 menu-item nav-active">Home</a>
+            </li>
+            {% if not user.is_authenticated %}
+            <li class="nav-item">
+                <a href="{% url 'login_link' %}" class="nav-link m-2 menu-item">Log In</a>
+            </li>
+            <li class="nav-item">
+                <a href="{% url 'register_link' %}" class="nav-link m-2 menu-item">Register</a></li>
+            {% else %}
+            </li>
+            <li class="nav-item">
+                <a href="{% url 'logout_link' %}" class="nav-link m-2 menu-item">Log Out</a>
+            </li>
+            {% endif %}
+             {% if user.is_authenticated %}
+            <li class="nav-item">
+                <a href="{% url 'view_cart'  %}" class="nav-link m-2 menu-item">Cart
+                 {% if food_count > 0 %}
+                <label class="badge badge-warning">{{ food_count }}</label>
+            {% endif %} </a>
+            </li>
+            {% endif %}
+        </ul>
+    </div>
+</nav>   
+
+<ul class="nav justify-content-center bg-light my-3 my-lg-3 ">
  {% for menu in menu %}
-  <li class="nav-item">
-    <a class="nav-link" href="{% url 'menu' id=menu.id %}">{{menu.name}}</a>
+  <li class="nav-item" style="text-transform: uppercase;">
+    <a class="nav-link"  href="{% url 'menu' id=menu.id %}">{{menu.name}}</a>
   </li>
   {% endfor %}
 </ul>
@@ -60,11 +72,55 @@
         </ul>
     </div>
     {% endif %}
+    <!--search bar-->
+   
+     <form class="form-inline my-3 my-lg-5" method='get' action='{% url 'search' %}'>
+              {% csrf_token %}
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search" type="search" name="q">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
 
     {%block content %}
     {%endblock %}
     
-    
+</div>  
+<!-- Footer -->
+<div class='container'>
+<footer class="page-footer font-small">
+    <div class="container">
+		<div class="row">
+			<div class="col-xs-12 col-sm-4 col-md-4 footerBlock">
+					<p class="footerIntro">Thank you for visiting Takeaway. We do welcome your comments & questions.</p>
+			</div>
+			<div class="col-xs-12 col-sm-4 col-md-4 footerBlock">
+					<h6 class="info">Contact Info</h6>
+					<div class="contact-info">
+						 <ul><i class="fas fa-phone-square"></i><span class="item">+65 98000000</span></ul>
+                        <ul><i class="fas fa-envelope"></i><span class="item">ddddd18@gmail.com</span></ul>
+					</div>
+				</div>
+      <div class="col-xs-12 col-sm-4 col-md-4 footerBlock">
+					<div class="list-unstyled">
+					  <h6 class="link">Link</h6>
+						 <ul class="fList">
+          <ul>
+            <a class="link1" href="/">Home</a>
+          </ul>
+          <ul>
+            <a class="link1" href="#"></a>
+          </ul>
+            <a class="link1" href="#">Contact Us</a>
+          </ul>
+        </ul>
+					</div>
+				</div>
+				<div class="col-md-12 bg-black copyright">
+						<p>@2019 Design by trent global college <br>
+                        F0-0 Building X,Jiefang Avenue, Qiaokou District, Wuhan, China</p>
+                </div> 
+        	</div>
+        	</div>
+</footer>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
