--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -27,7 +27,7 @@
         {% endfor %}
     {% endif %}
     
-    <p>If you already have an account, you can <a href="{% url 'login_link' %}">sign in </a></p>
+    <p>If you already have an account, you can <a href="{% url 'login_link' %}">sign in</a></p>
  </div>
 </div>
 <div class='container'>
@@ -35,7 +35,7 @@
     <form method="POST">
         {% csrf_token %}{{ form | as_bootstrap}}
         {{ form.as_bootstrap }}
-        <button type="submit" class="btn btn-default">submit</button>
+        <button type="submit" class="btn btn-danger">submit</button>
     </form>
 </div>
 </div>
