--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -4,77 +4,29 @@
 {% block content %}
 
 <div class="container">
-<div class="row row-flex">
-    {% for item in cart_items %}
-    <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-display">
-        <div class="caption">
-            <ul>
-            <li>{{ item.food.name }}</li>
-            <li>price:{{ item.food.price }}$</li>
-            </ul>
-            <p>
-                <form class="form" method="post" action="{% url 'adjust_cart' item.id %}">
+{% for item in cart_items %}
+<div class="card text-center" style="width: 16rem; display:inline-block;">
+  <img alt="Card image cap " style="width: 10rem;height: 15vw;" class="card-img-top img-fluid" src="{% get_media_prefix %}{{item.food.image}}" />
+  <div class="card-body">
+    <h5 class="card-title">{{ item.food.name }}</h5>
+     <h6>Price:  {{ item.food.price }}$</h6>
+    <p class="card-text"><form class="form" method="post" action="{% url 'adjust_cart' item.id %}">
                     {% csrf_token %}
                     <div class="form-group">
                         <label for="exampleInputAmount" class="sr-only">New Qty</label>
                         <div class="input-group">
-                            <div class="input-group-addon">Qty</div>
-                            <input name="quantity" type="number" min="0" max="999" class="form-control">
-                            <div class="input-group-addon">quantity:{{item.quantity}}</div>
+                            <div class="input-group-addon">Qty:</div>
+                            <input name="quantity" type="number" min="0" max="999" class="form-control" value="{{item.quantity}}">
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>
+                    <button type="submit" class="btn btn-danger"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>
                 </form>
-            </p>
-        </div>
-    </div>
+        </p>
+      </div>
+      </div>
     {% endfor %}
-    <div>
-    <p>Total:</p>
-    <p><span class="glyphicon glyphicon-euro" aria-hidden="true"></span>{{ total }}$</p>
-    <a href="{% url 'checkout' %}" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a>
-</div>
-</div>
+
+<button type="button" class="btn btn-secondary btn-lg btn-block"> Total:${{ total }}</button>
+<a href="{% url 'checkout' %}"  class="btn btn-info btn-lg btn-block" role="button" aria-pressed="true">Checkout</a>
 </div>
 {% endblock %}
-
-
-
-<!--<div class="container">-->
-<!--     <form class="form" method="post" action="{% url 'adjust_cart' item.id %}">-->
-<!--     {% csrf_token %}-->
-<!--	<table class="table table-hover table-condensed">-->
-<!--    				<thead>-->
-<!--						<tr>-->
-<!--							<th style="width:50%">Product</th>-->
-<!--							<th style="width:10%">Price</th>-->
-<!--							<th style="width:8%">Quantity</th>-->
-<!--							<th style="width:10%">Amend</th>-->
-<!--						</tr>-->
-<!--					</thead>-->
-<!--					<tbody>-->
-<!--					     {% for item in cart_items %}-->
-<!--						<tr>-->
-<!--							<td data-th="food">-->
-							
-<!--										<p class="nomargin">{{ item.food.name }}</p>-->
-								
-<!--							</td>-->
-<!--							<td data-th="Price">{{item.food.price}}</td>-->
-<!--							<td data-th="Quantity"><input name="quantity" type="number" min="1" max="999" class="form-control"></td>-->
-<!--							<td>-->
-<!--							 <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>							-->
-<!--							</td>-->
-<!--						</tr>-->
-<!--						{% endfor %}-->
-<!--					</tbody>-->
-<!--					<tfoot>-->
-<!--						<tr>-->
-<!--							<td><a href="#" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>-->
-<!--							<td colspan="2" class="hidden-xs"></td>-->
-<!--							<td class="hidden-xs text-center"><strong>Total {{ total }}</strong></td>-->
-<!--							<td><a href="{% url 'checkout' %}" class="btn btn-success btn-block">Checkout</a></td>-->
-<!--						</tr>-->
-<!--					</tfoot>-->
-<!--				</table>-->
-<!--</div>-->
