--- a/takeaway_app/templates/menu.html
+++ b/takeaway_app/templates/menu.html
@@ -12,18 +12,22 @@
     <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12 block">
     			<h5>{{ food.name }}</h5>
     	       <img src="{% get_media_prefix %}{{food.image}}" style="width:90%" alt="foods" />
-          			<h6>price:{{ food.price }}$</h6> 
+          			<h6>Price: ${{ food.price }}</h6> 
                 <h6>Cuisine: {{ food.menu }}</h6>
-                <a href="{% url 'food_detail' food.id %}" class="read-more">Read More</a>
+                 <a href="{% url 'food_detail' food.id %}" class="btn btn-warning read-more">Read More</a>
+                {% if user.is_authenticated %}
                 <form method="post" action="{% url 'add_to_cart' food.id %}">
                     {% csrf_token %}
-                    <div class="input-group">
-                        <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity">
-                        <span class="input-group-btn">
-                            <button class="btn btn-success" type="submit">Cart</button>
+                    <div class="input-group  col-xs-1">
+                        <input name="quantity" type="number" min="1" value="1" max="999" class="form-control" placeholder="Quantity">
+                        <span class="input-group-btn" >
+                            <button class="btn  btn-info" type="submit">Cart</button>
                         </span>
                     </div>
                 </form>
+                  {% else %}
+                 <a class="btn btn-info" href="{% url 'login_link' %}" role="button">Add to cart</a>
+            {% endif %}
     </div> 
     {% endfor %}
    </div> 
