--- a/takeaway_app/templates/search.html
+++ b/takeaway_app/templates/search.html
@@ -8,23 +8,28 @@
 <div class="container">
 <div class="row">  
 	 {% for food in food %}
-	 <h1>{{ food.name }}</h1>
-    <div class="col-lg-8 col-md-8 col-xs-12 col-sm-12 block">
-    	       <img src="{% get_media_prefix %}{{food.image}}" style="width:90%" alt="foods" />
-          		<h6>price:{{ food.price }}$</h6> 
-                <h6>Cuisine: {{ food.menu }}</h6>
-                <a href="{% url 'food_detail' food.id %}" class="read-more">Read More</a>
+    <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12 inline" id="block">
+    	       <img alt="Card image cap" class="card-img-top img-fluid" style="width:80%; height:25vw;" src="{% get_media_prefix %}{{food.image}}" />
+    	       <h5>{{ food.name }}</h5>
+    	       <h6>Cuisine: {{ food.menu }}</h6>
+          			<h6>price: $ {{ food.price }}</h6> 
+                <!--cart button-->
+                <a href="{% url 'food_detail' food.id %}" class="btn btn-warning read-more">Read More</a>
+                {% if user.is_authenticated %}
                 <form method="post" action="{% url 'add_to_cart' food.id %}">
                     {% csrf_token %}
-                    <div class="input-group">
-                        <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity">
-                        <span class="input-group-btn">
-                            <button class="btn btn-success" type="submit">Add</button>
+                    <div class="input-group  col-xs-1">
+                        <input name="quantity" type="number" min="1" value="1" max="999" class="form-control" placeholder="Quantity">
+                        <span class="input-group-btn" >
+                            <button class="btn  btn-info" type="submit">Cart</button>
                         </span>
                     </div>
                 </form>
-    </div> 
-    {% endfor %}
+                  {% else %}
+                 <a class="btn btn-info" href="{% url 'login_link' %}" role="button">Add to cart</a>
+            {% endif %}
+            </div> 
+            {% endfor %}
    </div> 
 </div> 
 {% endblock%}
