--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,11 +14,12 @@
 </head>
 
 <body>
+<!--navbar-->
 <div class='container'>
  <nav class="navbar navbar-expand-lg navbar-light  bg-danger">
     <div class="d-flex flex-grow-1">
         <!--<span class="w-100 d-lg-none d-block"></span>-->
-        <a class="navbar-brand  d-lg-inline-block" href="/">
+        <a class="navbar-brand  d-lg-inline-block" href="/" style="color:#e2d87c;font-weight: bold;">
            Takeaway
         </a>
         <div class="w-100 text-right">
@@ -28,25 +29,25 @@
         </div>
     </div>
     <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
-        <ul class="navbar-nav ml-auto flex-nowrap">
+        <ul class="navbar-nav ml-auto flex-nowrap"  style="font-weight: bold;>
             <li class="nav-item">
-                <a href="{% url 'index' %}" class="nav-link m-2 menu-item nav-active">Home</a>
+                <a href="{% url 'index' %}" class="nav-link m-2 menu-item nav-active" style="color:#e2d87c;">Home</a>
             </li>
             {% if not user.is_authenticated %}
             <li class="nav-item">
-                <a href="{% url 'login_link' %}" class="nav-link m-2 menu-item">Log In</a>
+                <a href="{% url 'login_link' %}" class="nav-link m-2 menu-item" style="color:#e2d87c;">Log In</a>
             </li>
             <li class="nav-item">
-                <a href="{% url 'register_link' %}" class="nav-link m-2 menu-item">Register</a></li>
+                <a href="{% url 'register_link' %}" class="nav-link m-2 menu-item" style="color:#e2d87c;">Register</a></li>
             {% else %}
             </li>
             <li class="nav-item">
-                <a href="{% url 'logout_link' %}" class="nav-link m-2 menu-item">Log Out</a>
+                <a href="{% url 'logout_link' %}" class="nav-link m-2 menu-item" style="color:#e2d87c;">Log Out</a>
             </li>
             {% endif %}
              {% if user.is_authenticated %}
             <li class="nav-item">
-                <a href="{% url 'view_cart'  %}" class="nav-link m-2 menu-item">Cart
+                <a href="{% url 'view_cart'  %}" class="nav-link m-2 menu-item" style="color:#e2d87c;">Cart
                  {% if food_count > 0 %}
                 <label class="badge badge-warning">{{ food_count }}</label>
             {% endif %} </a>
@@ -55,11 +56,11 @@
         </ul>
     </div>
 </nav>   
-
-<ul class="nav justify-content-center bg-light my-3 my-lg-3 ">
+<!--second menu-->
+<ul class="nav justify-content-center bg-light my-4 my-lg-4 ">
  {% for menu in menu %}
   <li class="nav-item" style="text-transform: uppercase;">
-    <a class="nav-link"  href="{% url 'menu' id=menu.id %}">{{menu.name}}</a>
+    <a class="nav-link" style="color:red;font-weight: bold;" href="{% url 'menu' id=menu.id %}">{{menu.name}}</a>
   </li>
   {% endfor %}
 </ul>
