--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,6 @@
+<!DOCTYPE html>
 {% load static %}
 {% load bootstrap_tags %}
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -29,7 +29,7 @@
         </div>
     </div>
     <div class="collapse navbar-collapse flex-grow-1 text-right" id="myNavbar">
-        <ul class="navbar-nav ml-auto flex-nowrap"  style="font-weight: bold;>
+        <ul class="navbar-nav ml-auto flex-nowrap"  style="font-weight:bold;">
             <li class="nav-item">
                 <a href="{% url 'index' %}" class="nav-link m-2 menu-item nav-active" style="color:#e2d87c;">Home</a>
             </li>
@@ -40,7 +40,6 @@
             <li class="nav-item">
                 <a href="{% url 'register_link' %}" class="nav-link m-2 menu-item" style="color:#e2d87c;">Register</a></li>
             {% else %}
-            </li>
             <li class="nav-item">
                 <a href="{% url 'logout_link' %}" class="nav-link m-2 menu-item" style="color:#e2d87c;">Log Out</a>
             </li>
@@ -73,18 +72,16 @@
         </ul>
     </div>
     {% endif %}
-    <!--search bar-->
-   
-     <form class="form-inline my-3 my-lg-5" method='get' action='{% url 'search' %}'>
+<!--search bar-->
+     <form class="form-inline my-3 my-lg-2 ml-auto" method='get' action='{% url 'search' %}'>
               {% csrf_token %}
-          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search" type="search" name="q">
+          <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" id="search" name="q">
           <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
-
+</div> 
     {%block content %}
     {%endblock %}
-    
-</div>  
+ 
 <!-- Footer -->
 <div class='container'>
 <footer class="page-footer font-small">
@@ -104,15 +101,16 @@
 					<div class="list-unstyled">
 					  <h6 class="link">Link</h6>
 						 <ul class="fList">
-          <ul>
-            <a class="link1" href="/">Home</a>
-          </ul>
-          <ul>
-            <a class="link1" href="#"></a>
-          </ul>
-            <a class="link1" href="#">Contact Us</a>
-          </ul>
-        </ul>
+                              <ul>
+                                <a class="link1" href="/">Home</a>
+                              </ul>
+                              <ul>
+                                <a class="link1" href="#"></a>
+                              </ul>
+                              <ul>
+                                <a class="link1" href="#">Contact Us</a>
+                              </ul>
+                        </ul>
 					</div>
 				</div>
 				<div class="col-md-12 bg-black copyright">
@@ -122,6 +120,7 @@
         	</div>
         	</div>
 </footer>
+</div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
