--- a/takeaway_app/templates/index.html
+++ b/takeaway_app/templates/index.html
@@ -15,8 +15,8 @@
 <div class="container">
 <div class="row">  
 	 {% for food in food %}
-    <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12 inline" id="block">
-    	       <img alt="Card image cap" class="card-img-top img-fluid" style="width:80%; height:25vw;" src="{% get_media_prefix %}{{food.image}}" />
+    <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12 inline-block" id="block">
+    	       <img alt="Card image cap" class="card-img-top img-fluid" style="width:100%; height:27vw;" src="{% get_media_prefix %}{{food.image}}" />
     	       <h5>{{ food.name }}</h5>
     	       <h6>Cuisine: {{ food.menu }}</h6>
           			<h6>Price:${{ food.price }}</h6> 
@@ -24,10 +24,10 @@
                 {% if user.is_authenticated %}
                 <form method="post" action="{% url 'add_to_cart' food.id %}">
                     {% csrf_token %}
-                    <div class="input-group  col-xs-1">
+                    <div class="input-group col-m-1 ">
                         <input name="quantity" type="number" min="1" value="1" max="999" class="form-control" placeholder="Quantity">
                         <span class="input-group-btn" >
-                            <button class="btn  btn-info" type="submit">Cart</button>
+                            <button class="btn btn-info" type="submit">Cart</button>
                         </span>
                     </div>
                 </form>
