--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,6 +11,7 @@
     {% block head_js %}
     {% endblock head_js %}
     <title>{%block title%}{%endblock%}</title>
+    {{ form.media }}
 </head>
 
 <body>
