--- a/takeaway_app/templates/index.html
+++ b/takeaway_app/templates/index.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}
-{% load static %}
+{{% load static %}
 {% load bootstrap_tags %}
 {% block title %}
 <title>home</title>
@@ -16,7 +16,7 @@
 <div class="row">  
 	 {% for food in food %}
     <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12 inline-block" id="block">
-    	       <img alt="Card image cap" class="card-img-top img-fluid" style="width:100%; height:27vw;" src="{% get_media_prefix %}{{food.image}}" />
+    	       <img alt="Card image cap" class="card-img-top img-fluid" style="width:100%; height:27vw;" src="{{food.photo.cdn_url}}" />
     	       <h5>{{ food.name }}</h5>
     	       <h6>Cuisine: {{ food.menu }}</h6>
           			<h6>Price:${{ food.price }}</h6> 
