--- a/takeaway_app/templates/detail.html
+++ b/takeaway_app/templates/detail.html
@@ -10,7 +10,7 @@
     <h1 class="text-center">{{food_detail.name}}</h1>
      <div class="row justify-content-center">
 <div class="card text-center" style="width: 20rem;">
-    	       <img alt="Card image cap" class="card-img-top img-fluid" src="{% get_media_prefix %}{{food_detail.image}}" />
+    	       <img alt="Card image cap" class="card-img-top img-fluid" src="{{ food_detail.photo.cdn_url }}" />
     	       <div class="card-body">
           		<p>{{ food_detail.description }}</p> 
                 <h6>Cuisine: {{ food_detail.menu }}</h6>
