--- a/takeaway_app/templates/search.html
+++ b/takeaway_app/templates/search.html
@@ -9,7 +9,7 @@
 <div class="row">  
 	 {% for food in food %}
     <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12 inline" id="block">
-    	       <img alt="Card image cap" class="card-img-top img-fluid" style="width:80%; height:25vw;" src="{% get_media_prefix %}{{food.image}}" />
+    	       <img alt="Card image cap" class="card-img-top img-fluid" style="width:80%; height:25vw;" src="{{food.photo.cdn_url}}" />
     	       <h5>{{ food.name }}</h5>
     	       <h6>Cuisine: {{ food.menu }}</h6>
           			<h6>price: $ {{ food.price }}</h6> 
