--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -1,20 +1,52 @@
 {% extends 'layout.html' %}{% load static %}
 {% load bootstrap_tags %}
 
-{% block head_js %}
+{%block js_includes %}
     <script type="text/javascript" src="https://js.stripe.com/v2"></script>
-    <script type="text/javascript">
-   
-            Stripe.setPublishableKey('pk_test_xfexALwVfqpdVvXwEKdLZEEg00ww6XEzky');
-   
-    </script> 
-    <script type="text/javascript" src="{% static 'js/stripe.js' %}"></script>
+    <script type="text/javascript" src="">
+    //<![CDATA[
+        Stripe.publishableKey = '{{stripe_publishable_key}}';
+    //]]>
+</script>
+<script>
+/*global $*/ 
+ $(function() {
+    $("#payment-form").submit(function(){
+        var form = this;
+        var card ={
+            number: $("#id_credit_card_number").val(),
+            expMonth: $("#id_expiry_month").val(),
+            expYear: $("#id_expiry_year").val(),
+            cvc: $("#id_cvv").val()
+        };
+    Stripe.createToken(card, function(status, response){
+        if(status === 200){
+            $("#credit-card-errors").hide();
+            $("#id_stripe_id").val(response.id);
+            
+            // Prevent the credit card details from being submitted to our server
+            $("#id_credit_card_number").removeAttr("name");
+            $("#id_cvv").removeAttr("name");
+            $("#id_expiry_month").removeAttr("name");
+            $("#id_expiry_year").removeAttr("name");
+            form.submit();
+        } else {
+            $("#stripe-error-message").text(response.error.message);
+            $("#credit-card-errors").show();
+            $("#validate_card_btn").attr("disabled", false);
+        }
+    });
+    return false;
+    });
+});
+ </script> 
 {% endblock %}
+
 
 {% block content %}
 <div class="container">
 <!--payment form-->
-<form role="form" method="post" id="payment-form" action="{% url 'checkout' %}">
+<form role="form" method="POST" id="payment-form" action="{% url 'checkout' %}">
     <div class="row justify-content-center">
     <legend>Payment Details</legend>
 
@@ -45,5 +77,3 @@
 </div>
 </div>
 {% endblock %}
-
-
